Changed user format and comment shown without refresh

--- a/alumni/templates/alumni/baseuser.html
+++ b/alumni/templates/alumni/baseuser.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 {% block style%}
     {% block stylebaseuser %}
+        <style>
+
+        </style>
     {% endblock %}
 {% endblock %}
 {% block body %}
