--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -244,7 +244,7 @@ form {
 				<input type="password" name = "password" value="" placeholder="Password" id="password" class="password form-control" />
 			</div>
 		</div>
-		<!--<p><a href="{% url 'password_reset' %}">Forgot password?</a></p>-->
+		<p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
 		<p>Not a user? Register <a href="{% url 'home:register' %}">here</a></p>
 		<div class="text-center inputGroup inputGroup3">
 			<button type = "submit" value = "login" class="btn btn-round btn-lg btn-block">Login</a>
