--- a/alumni/templates/post/add_comment_to_post.html
+++ b/alumni/templates/post/add_comment_to_post.html
@@ -4,6 +4,16 @@
     <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
+        <!--<textarea style="font-size:13pt;border:none;" rows="1" cols="50" name="text" placeholder="Write a comment..." class="form-control"></textarea>-->
         <button type="submit" style="text-decoration: none; background-color: #4CAF50;" class="btn btn-round btn-lg"> <span style="color: black;"><i class="icon fa-comment"></i> &nbsp;Comment</span></button>
     </form>
+<div id="results">
+
+</div>
 {% endblock %}
+{% block scriptbase %}
+<script>
+
+</script>
+{% endblock %}
+
