--- a/alumni/templates/post/baseuser.html
+++ b/alumni/templates/post/baseuser.html
@@ -3,6 +3,17 @@
 {% load auth_extras %}
 {% block style%}
 <title>Matrix</title>
+<style>
+.hide1:hover{
+    text-decoration: underline;
+    cursor:pointer;
+}
+.emoji:hover ,.emoji-btn:hover,.tosmiley:hover ,.toanimal:hover ,.tofood:hover ,.togame:hover ,.toplace:hover ,.toobject:hover ,.tosymbol:hover ,.toflag:hover{
+    cursor:pointer;
+}
+
+</style>
+
 <!--
 <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
