--- a/alumni/templates/post/error.html
+++ b/alumni/templates/post/error.html
@@ -123,7 +123,18 @@ body, html {
   <div class="message">
     <h1>404</h1>
     <h3>the page you seek does not exist</h3>
+    <h4>Take me back to <a href="{% url 'home:home' %}">home</a></h4>
   </div>
 </div>
 </body>
 </html>
+<!--<video autoplay muted loop id="myVideo"style="position: absolute; // Play the video in full screen mode-->
+  <!--top: 0px; -->
+  <!--left: 0px; -->
+  <!--min-width: 100%; -->
+  <!--min-height: 100%;-->
+  <!--z-index: -1; // Put the video behind all other elements-->
+<!--}">-->
+    <!--<source src="#" type="video/mp4">-->
+    <!--Your browser does not support HTML5 video.-->
+<!--</video>-->
