--- a/home/templates/home/unknownbase.html
+++ b/home/templates/home/unknownbase.html
@@ -4,10 +4,12 @@
 <html>
     <head>
         <title>Matrix</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--for consistance veiw of emoji across browsers-->
+
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -97,7 +99,12 @@
               .text {font-size: 11px}
             }
         </style>
-
+        <!--style for scroll to top div arrow at right bottom-->
+        <style>
+            .to_top:hover{
+                cursor:pointer;
+            }
+        </style>
         <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
         {% block style%}{%endblock%}
     </head>
@@ -161,12 +168,12 @@
                             <a class="nav-link dropdown-toggle" style="text-decoration: none" href="{% url 'home:profile' %}" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="icon now-ui-icons fa-user"></i>
                                 <p style="font-size:12px;">
-                                    {{ user.get_username }}
+                                    {{ user.get_username }} | {{user.first_name}}
                                 </p>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" style="text-decoration: none" href="{% url 'home:profile' %}">Profile</a>
-                                <a class="dropdown-item" style="text-decoration: none" href="{% url 'logout'%}?next={{request.path}}">Logout</a>
+                                <a class="dropdown-item" style="text-decoration: none" href="{% url 'logout'%}?next=/">Logout</a>
                             </div>
                         </li>
                     {% else %}
@@ -182,6 +189,9 @@
         </div>
     </nav>
     {% block body %}{% endblock %}
+    <div style="font-size:20pt;text-align:center;background-color:gray;z-index:1000;height:50px;width:50px;border:solid;border-width:1px;border-radius:5px;right:10px;bottom:10px;position:fixed;" class="to_top">
+        <i class="icon now-ui-icons fa-chevron-up"></i>
+    </div>
     <!-- Footer -->
       <footer id="footer">
         <div class="inner">
@@ -217,7 +227,8 @@
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="{% static 'assets/js/now-ui-kit.js' %}" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<!--Js file for login page-->
+
+    <!--Js file for login page-->
     <script src="{% static 'assets/js/TweenMax.min.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
     $(document).ready(function() {
@@ -234,7 +245,15 @@
         }
     }
 </script>
-
+    <!--script for scroll to top div arrow at right bottom-->
+<script>
+    //if($("html").scrollTop()>0){
+    //        alert("hello");
+    //}
+    $('.to_top').click(function(){
+        $('html, body').animate({scrollTop:0}, 'slow');
+    });
+</script>
 
     <script>
         // Used to toggle the menu on small screens when clicking on the menu button
@@ -297,21 +316,8 @@
         });
 
     </script>
-    <!--Script for read more read less on post_list page for comments-->
-    <script>
-    $(document).ready(function(){
-        $('.read_more_less2').toggle();
-        $(".hide1").click(function(){
-            if(this.value=="View less comments")this.value="View all comments";
-            else this.value="View less comments";
-            $(this).parent().find('.read_more_less2').toggle();
 
-        });
-        $(".show1").click(function(){
-            $(this).parent().find('.read_more_less2').show();
-        });
-    });
-    </script>
+
     <!--script for login page -->
     <script>
         var email = document.querySelector('#email'), password = document.querySelector('#password'), mySVG = document.querySelector('.svgContainer'), armL = document.querySelector('.armL'), armR = document.querySelector('.armR'), eyeL = document.querySelector('.eyeL'), eyeR = document.querySelector('.eyeR'), nose = document.querySelector('.nose'), mouth = document.querySelector('.mouth'), mouthBG = document.querySelector('.mouthBG'), mouthSmallBG = document.querySelector('.mouthSmallBG'), mouthMediumBG = document.querySelector('.mouthMediumBG'), mouthLargeBG = document.querySelector('.mouthLargeBG'), mouthMaskPath = document.querySelector('#mouthMaskPath'), mouthOutline = document.querySelector('.mouthOutline'), tooth = document.querySelector('.tooth'), tongue = document.querySelector('.tongue'), chin = document.querySelector('.chin'), face = document.querySelector('.face'), eyebrow = document.querySelector('.eyebrow'), outerEarL = document.querySelector('.earL .outerEar'), outerEarR = document.querySelector('.earR .outerEar'), earHairL = document.querySelector('.earL .earHair'), earHairR = document.querySelector('.earR .earHair'), hair = document.querySelector('.hair');
