--- a/home/templates/registration/edit_profile.html
+++ b/home/templates/registration/edit_profile.html
@@ -12,7 +12,7 @@
                 <div class="row" style="padding:10px;">
                     <div class="col-md-4" >
                         {% for us in person %}
-                            <img src="{{ us.profile_img.url }}" alt="Avatar" style="width:200px; height:200px;">
+                            <img src="{{ us.person.person_img.url }}" alt="Avatar" style="width:200px; height:200px;">
                         {% endfor %}
                     </div>
                     <div class="col-md-6">
