--- a/home/templates/registration/profile.html
+++ b/home/templates/registration/profile.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-4 w3-dark-grey w3-card-8" align="center" style="border:solid;padding:15px;">
                 <div class="photo-container">
-                    <img width="200px" height="200px" class="mx-auto rounded-circle img-raised" src="{{ us.profile_img.url }}" alt="Profile Image">
+                    <img width="200px" height="200px" class="mx-auto rounded-circle img-raised" src="{{ us.person.person_img.url }}" alt="Profile Image">
                 </div>
                 <br>
                 <h3 class="title" style="color:white;">{{ us.name }}</h3>
@@ -45,19 +45,22 @@
             <div class="col-md-1">
 
             </div>
-            <div class="col-md-7">
-                <div align="center">
-                    <h2>My Posts</h2>
+            {% if my_posts|length %}
+                <div class="col-md-7">
+                    <div align="center">
+                        <h2>My Posts</h2>
+                    </div>
+                    <div style="overflow-y: scroll;">
+                        {% for post in my_posts %}
+                            <div class="w3-panel w3-pale-blue w3-leftbar  w3-border-blue">
+                                <h4 style = "margin-bottom: 8px;" ><a href="{% url 'alumni:post_detail' pk=post.pk %}">{{ post.title|slice:":60" }}</a></h4>
+                                {{post.text|slice:":30"}}....
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
-                <div style="overflow: scroll;">
-                    {% for post in my_posts %}
-                        <div class="w3-panel w3-pale-blue w3-leftbar  w3-border-blue">
-                            <h4 style = "margin-bottom: 8px;" ><a href="{% url 'alumni:post_detail' pk=post.pk %}">{{ post.title }}</a></h4>
-                            {{post.text|slice:":30"}}....
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
+            {% endif %}
+
         </div>
     </div>
     <br>
